--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,1 +1,2 @@
-<h3>This page also uses partials in node.js!</h3>
+<h3>This page also uses partials in node.js!<br></h3>
+<h3>JavaScript is cool! </h3>
