--- a/views/partials/music.ejs
+++ b/views/partials/music.ejs
@@ -1,3 +1,5 @@
+<h1>This page uses MongoDB!</h1>
+
 <% for(let i=0; i < music.length; i++) { %>
     <div class="musicList">
         <h1><%= i + 1 %>: <%= music[i].songName %></h1>
