--- a/views/partials/music.ejs
+++ b/views/partials/music.ejs
@@ -1,8 +1,8 @@
-<h1>This page uses MongoDB!</h1>
+<h1>This page uses MongoDB! So cool!</h1>
 
 <% for(let i=0; i < music.length; i++) { %>
     <div class="musicList">
-        <h1><%= i + 1 %>: <%= music[i].songName %></h1>
+        <h2><%= i + 1 %>: <%= music[i].songName %></h1>
         <h3>Year: <%= music[i].songDate %></h3>
         <h3>
             <iframe width="360" height="315" 
