--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,2 +1,2 @@
-<h3>This page also uses partials in node.js!<br></h3>
-<h3>JavaScript is cool! </h3>
+<h1>This page also uses partials in node.js!</h1>
+<h2>Web dev is cool!</h2>
