--- a/views/partials/music.ejs
+++ b/views/partials/music.ejs
@@ -8,7 +8,8 @@
             <iframe width="360" height="315" 
             src="https://www.youtube.com/embed/<%=music[i].songLink%>" 
             frameborder="0" 
-            allowfullscreen>
+            allowfullscreen 
+            loading="lazy">
     </iframe>
        </h3>
     </div>
