--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,2 +1,5 @@
-<h1>This page also uses partials in node.js!</h1>
-<h2>Web dev is cool!</h2>
+<div class="content">
+    <h2>Jeffery Hoekstra</h2>
+    <p><img src="./images/pin5.png" width="20px" alt="">Ontario, Canada</p>
+    <h3>I'm 22 years old, Full-Stack Web and Application Developer. I'm passionate about coding in the most efficient and cost-effective way.</h3>
+</div>
