--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,14 @@
-<div class="navbar">
-    <ul>
-        <li><a href="?page=home">Home</a></li>
-        <li><a href="?page=about">About</a></li>
-        <li><a href="?page=music">Music</a></li>
-        <li><a href="?page=contact">Contact</a></li>
-    </ul>
-</div>
+<nav>
+    <div class="nav-container">
+        <ul class="logo">
+            <li><a href="?page=home">Jeffery Hoekstra</a></li>
+        </ul>
+        <ul class="navcenter">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Posts</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+</nav>
