--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,9 +9,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-
-    
+    justify-content: center;    
 }
 
 header, footer {
@@ -26,17 +24,13 @@ header, footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: clamp(100px, 75%, 900px);
     margin: 5em auto;
-
 }
 
 .logo, .navcenter {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     gap: 1.5em;
-
     list-style-type: none;
 }
 
@@ -45,7 +39,6 @@ header, footer {
     color: rgb(255, 255, 255);
     font-size: 1.2em;
     transition: ease-in-out 0.2s;
-    transition: transform 0.1s ease-in-out;
 }
 
 .logo {
