--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,5 +1,22 @@
 <div class="content">
-    <h2>Jeffery Hoekstra</h2>
-    <p><img src="./images/pin5.png" width="20px" alt="">Ontario, Canada</p>
-    <h3>I'm 22 years old, Full-Stack Web and Application Developer. I'm passionate about coding in the most efficient and cost-effective way.</h3>
+    <div class="nameBox">
+        <h2>Jeffery Hoekstra</h2>
+        <p><img src="./images/pin5.png" width="20px" alt="">Ontario, Canada</p>
+        <h3>I'm a 22-year-old developer focused on creating efficient and scalable web and application solutions.</h3>
+    </div>
+</div>
+
+<div class="codeLanguages">
+    <h2>Tech Stack</h2>
+    <div class="codeImages">
+        <img src="../images/lang/c-sharp.png" alt="">
+        <img src="../images/lang/c++.png" alt="">
+        <img src="../images/lang/c.png" alt="">
+        <img src="../images/lang/js.png" alt="">
+        <img src="../images/lang/css-3.png" alt="">
+        <img src="../images/lang/html-5.png" alt="">
+        <img src="../images/lang/java.png" alt="">
+        <img src="../images/lang/python.png" alt="">
+    </div>
+    <p>C, C++, C#, JavaScript, HTML5, CSS3, Java, and Python.</p>
 </div>
