--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,8 @@
     </header>
     
     <main>
-            <%- include("./partials/" + page) %>
+        <div class="sidebar"></div>
+        <%- include("./partials/" + page) %>
     </main>
 
     <footer>
