--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
 <footer>
-    <p>&copy; 2025 Jeffery Hoekstra</p>
+    <div>
+        <p>&copy; 2025 Jeffery Hoekstra<br>
+        <a href="https://www.flaticon.com/free-icons/" title="python icons">Icons by Freepik - Flaticon</a></p>
+    </div>
+
 </footer>
