--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,13 @@
+@import url('./sidebar.css');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 html {
     background-color: rgb(15, 15, 15);
 }
 
 /* ------- general styles ------- */
 main {
-    font-family: Verdana;
+    font-family: "Roboto", sans-serif;
 
     display: flex;
     flex-direction: column;
@@ -38,18 +41,20 @@ header, footer {
 .logo a, .navcenter a {
     display: inline-block;
     color: rgb(255, 255, 255);
-    font-size: 1.2em;
+    font-size: 1.6em;
     transition: ease-in-out 0.2s;
+    font-weight: 600;
 }
 
-.logo {
-    font-weight: bold;
+.logo a {
+    font-size: 1.8em;
+    text-decoration: none;
 }
 
 .logo a:hover, .navcenter a:hover {
     text-decoration: none;
     transform: scale(1.1);
-    color: rgb(255, 200, 200);
+    color: rgb(255, 170, 170);
 }
 
 
@@ -69,7 +74,7 @@ header, footer {
 .content {
     text-align: left;;
     color: white;
-    font-size: 1em;
+    font-size: 1.3em;
     margin: 0;
 
     width: clamp(300px, 50%, 650px);
@@ -77,7 +82,7 @@ header, footer {
     border-radius: 20px;
     border: 1px solid rgba(160, 160, 160, 0.8);
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
-    transition: ease-in-out 0.3s;
+    transition: ease-in-out 0.2s;
 }
 
 .content:hover {
@@ -106,7 +111,15 @@ header, footer {
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
     border-radius: 20px;
 
+    font-size: 1.3em;
+    transition: ease-in-out 0.2s;
     color: white;
+}
+
+.codeLanguages:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    /* border: 1px solid rgba(255, 255, 255, 0.5); */
+    box-shadow: 0 0 18px rgba(255, 255, 255, 0.2);
 }
 
 .codeLanguages p {
@@ -115,18 +128,26 @@ header, footer {
 }
 
 .codeLanguages img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     margin-right: 0.5em;
 }
 
 /* ------- footer partial ------- */
 footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: fixed;
     bottom: 0;
-
-    width: 100%;
     text-align: center;
-
+    width: 100%;
     color: white;
+}
+
+footer p {
+    position: relative;
+    display: inline-block;
+    border-top: 1px solid white;
+    padding-top: 0.5em;
 }
