--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div>
-        <p>&copy; 2025 Jeffery Hoekstra<br>
+        <p>&copy; 2025 Jeffery Hoekstra. All rights reserved.<br>
         <a href="https://www.flaticon.com/free-icons/" title="python icons">Icons by Freepik - Flaticon</a></p>
     </div>
 
