--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -7,7 +7,7 @@
 </div>
 
 <div class="codeLanguages">
-    <h2>Tech Stack</h2>
+    <h2>My Tech Stack</h2>
     <div class="codeImages">
         <img src="../images/lang/c-sharp.png" alt="">
         <img src="../images/lang/c++.png" alt="">
