--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,10 +1,10 @@
 <div class="content">
     <div class="nameBox">
+        <img src="../images/pinned.png" alt="" class="pinned">
         <h2>Jeffery Hoekstra</h2>
         <p><img src="./images/pin5.png" width="20px" alt="">Ontario, Canada</p>
         <h3>I'm a 22-year-old full-stack developer focused on building efficient
-            and scalable web and application solutions. I believe in writing clean, 
-            maintainable code that balances efficiency with scalability.</h3>
+            and scalable web and application solutions.</h3>
     </div>
 </div>
 
