--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,6 +88,12 @@ header, footer {
     transition: ease-in-out 0.2s;
 }
 
+.content .pinned {
+    width: 20px;
+    height: 20px;
+    display: block;
+}
+
 .content:hover {
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5);
