--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,1 +1,11 @@
-<h3>Contact me at...</h3>
+<div class="noBorderBox">
+    <div class="contactForm">
+        <h2>Get in touch</h2>
+        <form action="" class="contact-form">
+            <input type="text" name="name" class="contact-inputs" placeholder="Your name" required>
+            <input type="email" name="email" class="contact-inputs" placeholder="Your email" required>
+            <textarea name="message" placeholder="Your message" class="contact-inputs" required></textarea>
+            <button type="submit" action="?page=home">Submit</button>
+        </form>
+    </div>
+</div>
