--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="borderBox">
     <div class="nameBox">
         <img src="../images/pinned.png" alt="" class="pinned">
         <h2>Jeffery Hoekstra</h2>
@@ -8,17 +8,19 @@
     </div>
 </div>
 
-<div class="codeLanguages">
-    <h2>My Tech Stack</h2>
-    <div class="codeImages">
-        <img src="../images/lang/c-sharp.png" alt="">
-        <img src="../images/lang/c++.png" alt="">
-        <img src="../images/lang/c.png" alt="">
-        <img src="../images/lang/js.png" alt="">
-        <img src="../images/lang/css-3.png" alt="">
-        <img src="../images/lang/html-5.png" alt="">
-        <img src="../images/lang/java.png" alt="">
-        <img src="../images/lang/python.png" alt="">
+<div class="noBorderBox">
+    <div class="codeLanguages">
+        <h2>My Tech Stack</h2>
+        <div class="codeImages">
+            <img src="../images/lang/c-sharp.png" alt="">
+            <img src="../images/lang/c++.png" alt="">
+            <img src="../images/lang/c.png" alt="">
+            <img src="../images/lang/js.png" alt="">
+            <img src="../images/lang/css-3.png" alt="">
+            <img src="../images/lang/html-5.png" alt="">
+            <img src="../images/lang/java.png" alt="">
+            <img src="../images/lang/python.png" alt="">
+        </div>
+        <p>C, C++, C#, JavaScript, HTML5, CSS3, Java, and Python.</p>
     </div>
-    <p>C, C++, C#, JavaScript, HTML5, CSS3, Java, and Python.</p>
 </div>
