--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Posts</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="?page=contact">Contact</a></li>
         </ul>
     </div>
 </nav>
