--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,7 +74,7 @@ header, footer {
 /* ------- content partial HOME ------- */
 
 
-.content {
+.borderBox {
     text-align: left;;
     color: white;
     font-size: 1.3em;
@@ -88,33 +88,33 @@ header, footer {
     transition: ease-in-out 0.2s;
 }
 
-.content .pinned {
+.borderBox .pinned {
     width: 20px;
     height: 20px;
     display: block;
 }
 
-.content:hover {
+.borderBox:hover {
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 18px rgba(255, 255, 255, 0.2);
 }
 
-.content p {
+.borderBox p {
     font-size: 0.9em;
     color: rgba(255, 255, 255, 0.7)
 }
 
-.content img {
+.borderBox img {
     vertical-align: top;
     margin-right: 0.5em
 }
 
-/* coding languages */
-.codeLanguages {
-    text-align: center;
+
+.noBorderBox {
+    /* text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; */
     width: clamp(300px, 50%, 650px);
     padding: 1em;
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
@@ -125,10 +125,18 @@ header, footer {
     color: white;
 }
 
-.codeLanguages:hover {
+.noBorderBox:hover {
     background-color: rgba(255, 255, 255, 0.1);
     /* border: 1px solid rgba(255, 255, 255, 0.5); */
     box-shadow: 0 0 18px rgba(255, 255, 255, 0.2);
+}
+
+/* coding languages */
+
+.codeLanguages {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .codeLanguages p {
@@ -140,6 +148,61 @@ header, footer {
     width: 50px;
     height: 50px;
     margin-right: 0.5em;
+}
+
+/* ------- CONTACT PARTIAL ------- */
+
+.contactForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+}
+.contact-form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap:1em;
+}
+
+.contact-form .contact-inputs {
+    width: clamp(250px, 50%, 650px);
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color:black;
+    border-radius: 50px;
+}
+
+.contact-form textarea {
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 500px;
+    resize:vertical;
+}
+
+.contact-inputs:focus {
+    border: 2px solid rgb(255, 170, 170);
+}
+
+
+.contact-inputs::placeholder {
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+}
+
+.contact-form button {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.6);
+    gap: 10px;
+    border: none;
+    border-radius: 50px;
 }
 
 /* ------- footer partial ------- */
