--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,8 +6,8 @@
         <ul class="navcenter">
             <li><a href="#">About</a></li>
             <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Posts</a></li>
-            <li><a href="?page=contact">Contact</a></li>
+            <li><a href="./?page=posts">Posts</a></li>
+            <li><a href="./?page=contact">Contact</a></li>
         </ul>
     </div>
 </nav>
