--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-container">
         <ul class="logo">
-            <li><a href="?page=home">Jeffery Hoekstra</a></li>
+            <li><a href="./?page=home">Jeffery Hoekstra</a></li>
         </ul>
         <ul class="navcenter">
             <li><a href="#">About</a></li>
